--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -1,14 +1,13 @@
-<div ng-controller="HeaderCtrl" class="container">
+<div class="container">
   <ul class="list-inline">
-    <li><a href="/">Home</a></li>
-    <li><a href="/contact">Contact</a></li>
+    <li><a ui-sref="home">Home</a></li>
   </ul>
   <ul ng-if="isAuthenticated()" class="list-inline">
-    <li><a href="/account" ng-class="{ active: isActive('/account')}">My Account</a></li>
-    <li><a href="#" ng-click="logout()">Logout</a></li>
+    <li><a ui-sref="account" ng-class="{ active: isActive('/account')}">My Account</a></li>
+    <li><a ui-sref="#" ng-click="logout()">Logout</a></li>
   </ul>
   <ul ng-if="!isAuthenticated()" class="list-inline">
-    <li><a href="/login" ng-class="{ active: isActive('/login')}">Log in</a></li>
-    <li><a href="/signup" ng-class="{ active: isActive('/signup')}">Sign up</a></li>
+    <li><a ui-sref="login" ng-class="{ active: isActive('/login')}">Log in</a></li>
+    <li><a ui-sref="signup" ng-class="{ active: isActive('/signup')}">Sign up</a></li>
   </ul>
 </div>
