--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,6 +5,9 @@ html {
 
 body {
   margin-bottom: 44px;
+  overflow-x: hidden;
+  width: 100%;
+  height: 100vh;
 }
 
 ul, ol {
@@ -68,3 +71,67 @@ form button[type="submit"] {
   height: 30px;
   vertical-align: middle;
 }
+
+
+.scroll {
+  -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+  display: block;
+  overflow-x: hidden;
+  height: 100%;
+  width: 100%;
+}
+.scroll [ui-view="partial"] {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.scroll [ui-view="partial"].ng-animate {
+    transition:all 1s ease;
+}
+.scroll [ui-view="partial"].ng-enter {
+  transform:translate3d(100%, 0, 0);
+        background-color: lawngreen;
+}
+
+.scroll [ui-view="partial"].ng-enter.ng-enter-active {
+  transform:translate3d(0, 0, 0);
+}
+
+.scroll [ui-view="partial"].ng-leave {
+  transform:translate3d(0, 0, 0);
+}
+
+.scroll [ui-view="partial"].ng-leave.ng-leave-active {
+  transform:translate3d(-100%, 0, 0);
+    background-color: red;
+}
+
+
+
+.scroll [ui-view="partial"].backward.ng-enter {
+  -webkit-transform:translate3d(-100%, 0, 0);
+  -moz-transform:translate3d(-100%, 0, 0);
+  transform:translate3d(-100%, 0, 0);
+}
+
+.scroll [ui-view="partial"].backward.ng-enter-active {
+  -webkit-transform:translate3d(0, 0, 0);
+  -moz-transform:translate3d(0, 0, 0);
+  transform:translate3d(0, 0, 0);
+}
+
+.scroll [ui-view="partial"].backward.ng-leave {
+  -webkit-transform:translate3d(0, 0, 0);
+  -moz-transform:translate3d(0, 0, 0);
+  transform:translate3d(0, 0, 0);
+}
+
+.scroll [ui-view="partial"].backward.ng-leave-active {
+  -webkit-transform:translate3d(100%, 0, 0);
+  -moz-transform:translate3d(100%, 0, 0);
+  transform:translate3d(100%, 0, 0);
+}
+
+
