loader, welcome, login, signup screens

--- a/public/partials/header.html
+++ b/public/partials/header.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!-- <div class="container">
   <ul class="list-inline">
     <li><a ui-sref="home">Home</a></li>
   </ul>
@@ -10,4 +10,4 @@
     <li><a ui-sref="login" ng-class="{ active: isActive('/login')}">Log in</a></li>
     <li><a ui-sref="signup" ng-class="{ active: isActive('/signup')}">Sign up</a></li>
   </ul>
-</div>
+</div> -->
