--- a/public/css/main.css
+++ b/public/css/main.css
@@ -68,3 +68,354 @@ form button[type="submit"] {
   height: 30px;
   vertical-align: middle;
 }
+
+
+/* GENERAL */
+
+.container.fs {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 0;
+  margin: 0;
+  background: rgba(254, 254, 254, 1);
+  overflow: hidden;
+}
+
+button {
+  border: none;
+  cursor: pointer;
+}
+
+button:focus,
+button:hover {
+  outline: none;
+}
+
+
+/* TYPOGRAPHY */
+
+.ft--bodoni {
+  font-family: 'Bodoni';
+  -webkit-font-smoothing: antialiased;
+}
+
+.ft--avenir {
+  font-family: 'Avenir';
+}
+
+.ft--avenir__demibold {
+  font-family: 'Avenir Demi Bold';
+}
+
+.ft--avenir__bold {
+  font-family: 'Avenir Bold';
+}
+
+.ft--avenir__heavy {
+  font-family: 'Avenir Heavy';
+}
+
+.ft--white {
+  color: #F9F9F9;
+}
+
+.ft--red {
+  color: #FF6A6A;
+}
+
+.ft--black {
+  color: #272727;
+}
+
+.ft--grey__dark {
+  color: #4A4A4A;
+}
+
+.ft--grey__light {
+  color: #5D5D5D;
+}
+
+
+/* LOADER */
+
+.loader {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: center;
+  z-index: 1;
+}
+
+.loader span {
+  font-size: 36px;
+  transition: .3s ease-in;
+}
+.loader.loader__out span {
+  opacity: 0;
+}
+
+.loader .loader--point {
+  animation: point-blink 1s infinite ease;
+}
+
+.loader .loader--point:nth-of-type(1) {
+  animation-delay: .25s;
+}
+.loader .loader--point:nth-of-type(2) {
+  animation-delay: .50s;
+}
+.loader .loader--point:nth-of-type(3) {
+  animation-delay: .75s;
+}
+
+.loader--heart {
+  margin-bottom: 25px;
+  transition: .3s ease-in;
+}
+
+.loader--heart.loader__beating {
+  animation: heartbeat 1s ease-out 1.3s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes heartbeat {
+  0% { transform: scale3d(1, 1, 0); }
+  14% { transform: scale3d(1.2, 1.2, 0); }
+  28% { transform: scale3d(1, 1, 0); }
+  42% { transform: scale3d(1.2, 1.2, 0); }
+  70% { transform: scale3d(1, 1, 0); }
+}
+
+@keyframes point-blink {
+  0%  {opacity: 1;}
+  14% {opacity: 1;}
+  28% {opacity: 0;}
+  42% {opacity: 0;}
+  70% {opacity: 1;}
+}
+
+.loader--heart.loader__out {
+  animation: loaderHeart-out 1s cubic-bezier(0.5, -0.1, 0.5, 1) forwards;
+}
+
+@keyframes loaderHeart-out {
+  0%   { transform: scale3d(1, 1, 0); }
+  100% { transform: scale3d(50, 50, 0); }
+}
+
+.loader.loader__out {
+  animation: loader-out .2s ease-in .8s forwards;
+  pointer-events: none;
+}
+
+@keyframes loader-out {
+  0%   { opacity: 1; }
+  99%  { opacity: 0; }
+  100% { opacity: 0; display: none;}
+}
+
+
+/* WELCOME SCREEN */
+
+.legal-warning {
+  text-align: center;
+  position: absolute;
+  bottom: 10px;
+  width: 100%;
+  font-size: 12px;
+  color: #3C3C3C;
+}
+
+.container.welcome {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background: rgba(250, 250, 250, 0.5);;
+}
+
+.welcome svg {
+  animation: floating 2s infinite ease-in-out;
+}
+
+@keyframes floating {
+  from {-webkit-transform:translate(0, 0px);}
+  65% {-webkit-transform:translate(0, 10px);}
+  to {-webkit-transform: translate(0, -0px);    }
+}
+
+.welcome h1 {
+  margin: 22px 0 16px 0;
+  font-size: 60px;
+  text-transform: uppercase;
+}
+
+.welcome h1 > span {
+  color: #FF6A6A;
+  font-size: 60px;
+  text-transform: uppercase;
+}
+
+.welcome hr {
+  height: 1px;
+  width: 100px;
+  margin: 0 auto 30px auto;
+  background: #272727;
+  border: none;
+}
+
+.welcome span {
+  max-width: 420px;
+  font-size: 18px;
+  margin-bottom: 40px;
+}
+
+.welcome button {
+  background: #FF6A6A;
+  color: white;
+  border-radius: 15px;
+  width: 300px;
+  height: 50px;
+  font-size: 18px;
+  transition: .2s ease;
+}
+.welcome button:focus,
+.welcome button:hover {
+  background: #F54C4C;
+}
+
+
+.home_background {
+  position: fixed;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: -10;
+}
+.home_background_video {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  top: 0;
+  left: 0;
+  opacity: 0.3;
+}
+
+@media (min-aspect-ratio: 16/9) {
+  .home_background > video {
+    height: 300%;
+    top: -100%;
+  }
+}
+@media (max-aspect-ratio: 16/9) {
+  .Home_background > video {
+    width: 300%;
+    left: -100%;
+  }
+}
+@supports (object-fit: cover) {
+  .home_background > video {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+  }
+}
+
+@media only screen and (max-width: 48em) {
+  .container.welcome {
+    background: rgba(250, 250, 250, 0.8);
+  }
+  .container.welcome h1 {
+    font-size: 30px;
+  }
+  .container.welcome h1 > span {
+    font-size: 30px;
+  }
+}
+
+
+/* LOGIN SCREEN */
+
+.container.login {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background: rgba(250, 250, 250, 1);
+}
+
+.login h2 {
+  font-size: 36px;
+  margin: 0 0 25px 0;
+}
+
+.login button {
+  font-size: 20px;
+  background: #4495FF;
+  border-radius: 15px;
+  border: none;
+  text-align: center;
+  width: 380px;
+  height: 50px;
+  transition: .2s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 40px;
+}
+.login button:focus,
+.login button:hover {
+  outline: none;
+  background: #2B86FC;
+}
+.login button>img {
+  margin-right: 16px;
+}
+
+.login .fb-info {
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+}
+
+.login .fb-info>img {
+  margin-right: 9px;
+}
+
+.login .conditions-info {
+  font-size: 14px;
+  max-width: 380px;
+  margin: 9px 0 20px 0;
+}
+
+.login .no-fb {
+  font-size: 14px;
+}
+
+.login label {
+  font-size: 36px;
+}
+
+.login input {
+  border: 1px solid #BCBCBC;
+  border-radius: 15px;
+  width: 380px;
+  height: 50px;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.login button {
+  margin: 0 auto 18px auto;
+}
