--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,25 +1,25 @@
-<div class="container">
-  <div class="row">
-    <div class="col-sm">
-      <h3>Heading</h3>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-        condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod.
-        Donec sed odio dui.</p>
-      <a href="#" role="button">View details</a>
-    </div>
-    <div class="col-sm">
-      <h3>Heading</h3>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-        condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod.
-        Donec sed odio dui.</p>
-      <a href="#" role="button">View details</a>
-    </div>
-    <div class="col-sm">
-      <h3>Heading</h3>
-      <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-        condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod.
-        Donec sed odio dui.</p>
-      <a href="#" role="button">View details</a>
-    </div>
+<div class="container fs loader">
+  <div class="loader--heart loader__beating">
+    <svg xmlns="http://www.w3.org/2000/svg" width="90" height="70" viewBox="0 0 120 100">
+      <path fill="#FF6A6A" fill-rule="evenodd" d="M88 0C76 0 65.5 6.8 60 16.7 54.6 6.7 44 0 32 0 14.2 0 0 14 0 31.5 0 59.7 35 75.3 60 100c25.8-25.5 60-40 60-68.5C120 14 105.7 0 88 0"/>
+    </svg>
   </div>
+  <span class="ft--avenir__bold ft--red">Chargement <span class="loader--point">.</span><span class="loader--point">.</span><span class="loader--point">.</span>
+</div>
+
+<div class="container fs welcome">
+  <svg xmlns="http://www.w3.org/2000/svg" width="64" height="54" viewBox="0 0 64 54">
+    <path fill="#5D5D5D" fill-rule="evenodd" d="M47 0c-6.5 0-12.2 3.6-15 9-3-5.4-8.5-9-15-9C7.6 0 0 7.6 0 17c0 15.2 18.6 23.6 32 37C45.7 40 64 32.2 64 17c0-9.4-7.7-17-17-17"/>
+  </svg>
+  <h1 class="ft--avenir__heavy ft--grey__light">amour<span class="ft--avenir__heavy ft--grey__light">&</span>numérique</h1>
+  <hr>
+  <span class="ft--avenir ft--grey__light">Un webdocumentaire sur les réseaux de rencontre réalisé en une semaine.</span>
+  <button class="ft--avenir ft--white" ui-sref="login" ng-class="{ active: isActive('/login')}">Commencer l'expérience</button>
+</div>
+<span class="legal-warning">Ce projet ayant été réalisé dans le cadre de la pédagogie d’HETIC, nous n’avons pas acquis les droits de ces fichiers.</span>
+<div class="home_background">
+  <video autoplay loop muted class="home_background_video">
+    <source type="video/mp4" src="img/timelapse.mp4" media="(orientation: landscape)">
+    <source type="video/mp4" src="img/timelapse.mp4" media="(orientation: portrait)">
+  </video>
 </div>
