--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -1,23 +1,11 @@
-<div class="container">
+<div class="container fs login">
+  <h2 class="ft--avenir__bold ft--grey__dark">Qui êtes-vous ?</h2>
   <div ng-if="messages.error" role="alert" class="text-danger">
     <div ng-repeat="error in messages.error">{{error.msg}}</div>
   </div>
+  <button ng-click="authenticate('facebook')" class="ft--avenir__bold ft--white"><img src="img/facebook.svg" alt="Facebook icon">Se connecter avec Facebook</button>
 
-  <h4>Log In</h4>
-
-  <form ng-submit="login()">
-    <label for="email">Email</label>
-    <input type="email" name="email" id="email" placeholder="Email" ng-model="user.email" autofocus>
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password" placeholder="Password" ng-model="user.password">
-    <p><a href="/forgot">Forgot your password?</a></p>
-    <button type="submit">Log in</button>
-  </form>
-
-  <hr>
-
-  <button ng-click="authenticate('facebook')">Sign in with Facebook</button>
-  <br>
-
-  <p>Don't have an account? <a href="/signup">Sign up</a></p>
+  <span class="fb-info ft--avenir__demibold ft--grey__light"><img src="img/info.svg" alt="information icon"> Nous ne publions rien sur Facebook</span>
+  <span class="conditions-info ft--avenir ft--grey__dark">En continuant, vous acceptez nos <a href="#" class="ft--red">conditions d’utilisation</a> et Politique de Confidentialité</span>
+  <a href="/signup" class="no-fb ft--avenir ft--grey__dark">Je n'ai pas de compte Facebook</a>
 </div>
