--- a/public/partials/signup2.html
+++ b/public/partials/signup2.html
@@ -4,10 +4,10 @@
   </div>
   <form ng-submit="signup()">
     <label for="age" class="ft--avenir__bold ft--grey__dark">Quel est votre âge ?</label>
-    <input class="ft--avenir ft--grey__light" type="name" name="age" id="age" placeholder="Mon âge" ng-model="user.age" autofocus required>
+    <input class="ft--avenir ft--grey__light" type="number" min="1" max="99" step="1" name="age" id="age" placeholder="Mon âge" ng-model="user.age" autofocus required>
     <label for="status" class="ft--avenir__bold ft--grey__dark">Quel est votre statut relationnel ?</label>
-    <input class="ft--avenir ft--grey__light" type="radio" type="text" name="status" id="status" ng-model="user.status" value="celibataire">Célibataire
-    <input class="ft--avenir ft--grey__light" type="radio" type="text" name="status" id="status" ng-model="user.status" value="encouple">En couple
+    <div><input class="ft--avenir ft--grey__light" type="radio" type="text" name="status" id="status" ng-model="user.status" value="celibataire">Célibataire</div>
+    <div><input class="ft--avenir ft--grey__light" type="radio" type="text" name="status" id="status" ng-model="user.status" value="encouple">En couple</div>
     <button class="ft--avenir__bold ft--white" type="submit">Confirmer</button>
     <span class="conditions-info ft--avenir ft--grey__dark">En continuant, vous acceptez nos <a href="#" class="ft--red">conditions d’utilisation</a> et Politique de Confidentialité</span>
   </form>
