--- a/public/css/main.css
+++ b/public/css/main.css
@@ -360,22 +360,22 @@ button:hover {
 
 /*
 .scroll {
-  -webkit-transform: translate3d(0, 0, 0);
-          transform: translate3d(0, 0, 0);
-  display: block;
-  overflow-x: hidden;
-  height: 100%;
-  width: 100%;
+-webkit-transform: translate3d(0, 0, 0);
+transform: translate3d(0, 0, 0);
+display: block;
+overflow-x: hidden;
+height: 100%;
+width: 100%;
 }
 .scroll [ui-view="partial"] {
-  position: absolute;
-  width: 100%;
-  height: 100%;
+position: absolute;
+width: 100%;
+height: 100%;
 }
 */
 
 .scroll [ui-view="partial"].ng-animate {
-    transition:all 1s ease;
+  transition:all 1s ease;
 }
 .scroll [ui-view="partial"].ng-enter {
   transform:translate3d(100%, 0, 0);
@@ -392,7 +392,7 @@ button:hover {
 
 .scroll [ui-view="partial"].ng-leave.ng-leave-active {
   transform:translate3d(-100%, 0, 0);
-    background-color: red;
+  background-color: red;
 }
 
 
@@ -423,8 +423,91 @@ button:hover {
 /* SIGNUP2 FORM */
 
 .login form input.ng-invalid.ng-dirty {
-    border-color:red;
+  border-color:red;
 }
 .login form input.ng-valid.ng-dirty {
-    border-color:green;
+  border-color:green;
+}
+
+
+
+/* NAV (control + bar) */
+
+.nav-control {
+  position: absolute;
+  bottom: 90px;
+  left: calc(50% - 30px);
+  width: 60px;
+  height: 40px;
+  border-radius: 5px 5px 0 0;
+  background: #FF6A6A;
+  cursor: pointer;
+  transition: .3s ease;
+}
+nav .nav-control:hover {
+  transform: translate3d(0, -10px, 0);
+}
+nav.up .nav-control:hover {
+  transform: translate3d(0, 10px, 0);
+}
+
+nav {
+  position: absolute;
+  width: 100%;
+  height: 100px;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: center;
+  background: #FF6A6A;
+  transition: .3s ease;
+  transform: translateY(100vh);
+}
+nav.up {
+  transform: translateY(calc(100vh - 100px));
+}
+
+nav a {
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  background: #FEFEFE;
+  margin-right: 100px;
+}
+nav a:last-of-type {
+  margin-right: 0;
+}
+nav a::after {
+  content: '';
+  display: block;
+  width: 110px;
+  height: 7px;
+  background: #FEFEFE;
+  margin-left: 25px;
+  margin-top: 12px;
+}
+nav a:last-of-type::after {
+  display: none;
+}
+
+nav a.active::before {
+  content: '';
+  display: block;
+  position: relative;
+  top: -5px;
+  left: -6px;
+  width: 41px;
+  height: 41px;
+  border-radius: 100%;
+  background: rgba(254, 254, 254, 0.35);
+}
+
+nav a.active::after {
+  margin-top: -29px;
+}
+
+nav .slide-title {
+  position: absolute;
+  top: 0;
+  left: 0;
 }
