--- a/public/partials/slide1.html
+++ b/public/partials/slide1.html
@@ -1,13 +1,18 @@
-<div class="container fs slide1">
-  <!-- Motion Vidéo + Voiceover -->
-  <!-- Après des siècles d’interaction sociale nécessitant la présence physique des interlocuteurs
-  le numérique est venu révolutionner nos habitudes sociales. Depuis l’arrivée du téléphone mobile et du web,  nous sommes devenus des êtres hyper connectés. Dès lors, tout s’est accéléré, l’apparition du smartphones, des messages, des réseaux sociaux (facebook, twitter, instagram), chacun de ces éléments nous a rendu de plus en plus dépendants de nos appareils électroniques. On ne peut plus envisager une relation, quelle que soit sa nature;  sans passer par un contact numérique. Nous sommes connectés en permanence à nos proches; et cette interconnexion permanente des émotions, des rêveries et des fantasmes suscite de nouvelles façons d’être ensemble, d’aimer et d’échanger. -->
+<div class="container fs slide1 model--text" style="background: url(https://unsplash.it/1440/900) no-repeat;">
+  <section>
+    <h1 class="ft--avenir__bold ft--grey__dark">An awesome title</h1>
+    <p class="ft--avenir ft--grey__light">Batnae municipium in Anthemusia conditum Macedonum manu priscorum ab Euphrate flumine brevi spatio disparatur, refertum mercatoribus opulentis, ubi annua sollemnitate prope Septembris initium mensis ad nundinas magna promiscuae fortunae convenit multitudo ad commercanda quae Indi mittunt et Seres aliaque plurima vehi terra marique consueta.</p>
+    <blockquote class="ft--avenir ft--grey__light">La parole, les gestes, les mimiques restent d’usage courant dans les échanges au sein des sociétés humaines. Nous ne vivons pas encore au sein d’une pure société de communication numérique et nous ne sommes pas non plus les expérimentateurs d’un nouvel âge de l’information. Mais nous sommes entrés, de plein gré, dans une époque neuve, et qui ne nous laisse aucun répit : le temps de la connexion permanente</blockquote>
+    <p class="ft--avenir ft--grey__light">— La condition numérique - Jean-François Fogel & Bruno Patino</p>
+    <button class="ft--avenir__bold ft--white">Passer à la suite</button>
+  </section>
 </div>
 
 <nav>
+  <div class="nav-overlay"></div>
   <div class="nav-control"></div>
   <span class="slide-title" ng-bind="$state.current.data.pageTitle"></span>
-  <a href="#" class="active"></a>
-  <a href="#"></a>
-  <a href="#"></a>
+  <a href="#" class="active"><div class="tooltip ft--avenir ft--white">Part 1</div></a>
+  <a href="#"><div class="tooltip ft--avenir ft--white">Part 2kvljvkvkhv</div></a>
+  <a href="#"><div class="tooltip ft--avenir ft--white">Part 3</div></a>
 </nav>
