--- a/public/partials/slide3.html
+++ b/public/partials/slide3.html
@@ -1,9 +1,9 @@
 <div class="container fs model--question">
   <h1 class="ft--avenir__bold ft--grey__dark">Et toi, penses-tu que la rencontre internet est <span class="ft--red">superficielle</span> ?<br>Ou gage d’une <span class="ft--red">relation sérieuse</span> ? </h1>
-  <form>
-    <input name="answer" id="answerOui" type="radio" value="oui">Oui<br>
-    <input name="answer" id="answerNon" type="radio" value="non">Non<br>
-  </form>
+  <div class="answer">
+    <button class="ft--avenir__bold ft--white">Superficielle</button>
+    <button class="ft--avenir__bold ft--white">Sérieuse</button>
+  </div>
 </div>
 
 <nav>
