--- a/public/partials/slide1.html
+++ b/public/partials/slide1.html
@@ -4,7 +4,7 @@
     <p class="ft--avenir ft--grey__light">Batnae municipium in Anthemusia conditum Macedonum manu priscorum ab Euphrate flumine brevi spatio disparatur, refertum mercatoribus opulentis, ubi annua sollemnitate prope Septembris initium mensis ad nundinas magna promiscuae fortunae convenit multitudo ad commercanda quae Indi mittunt et Seres aliaque plurima vehi terra marique consueta.</p>
     <blockquote class="ft--avenir ft--grey__light">La parole, les gestes, les mimiques restent d’usage courant dans les échanges au sein des sociétés humaines. Nous ne vivons pas encore au sein d’une pure société de communication numérique et nous ne sommes pas non plus les expérimentateurs d’un nouvel âge de l’information. Mais nous sommes entrés, de plein gré, dans une époque neuve, et qui ne nous laisse aucun répit : le temps de la connexion permanente</blockquote>
     <p class="ft--avenir ft--grey__light">— La condition numérique - Jean-François Fogel & Bruno Patino</p>
-    <button class="ft--avenir__bold ft--white">Passer à la suite</button>
+    <button class="ft--avenir__bold ft--white" ui-sref="goto({chapter: '1', slide: '3'})">Passer à la suite</button>
   </section>
 </div>
 
