--- a/public/partials/slide2.html
+++ b/public/partials/slide2.html
@@ -4,4 +4,10 @@
   </video>
 </div>
 
-
+<nav>
+  <div class="nav-overlay"></div>
+  <div class="nav-control"></div>
+  <a href="#" class="active"><div class="tooltip ft--avenir ft--white">Part 1</div></a>
+  <a href="#"><div class="tooltip ft--avenir ft--white">Part 2kvljvkvkhv</div></a>
+  <a href="#"><div class="tooltip ft--avenir ft--white">Part 3</div></a>
+</nav>
