add skip button to video model

--- a/public/partials/slide2.html
+++ b/public/partials/slide2.html
@@ -2,6 +2,7 @@
   <video src="img/timelapse.mp4" autoplay loop preload="auto">
     Your browser doesn't support video API
   </video>
+  <button class="ft--avenir__bold ft--white" ui-sref="goto({chapter: {{data.nextChapter}}, slide: {{data.nextSlide}}})">Passer</button>
 </div>
 
 <nav>
