--- a/public/partials/slide4.html
+++ b/public/partials/slide4.html
@@ -1,11 +1,11 @@
 <div class="container fs model--textchat" style="background: url(https://unsplash.it/1440/900) no-repeat;">
   <section>
-    <h1 class="ft--avenir__bold ft--grey__dark">Tu partages l’avis de 70% des personnes que nous avons interrogé.</h1>
+    <h1 class="ft--avenir__bold ft--grey__dark">{{data.title}}</h1>
     <div class="chat">
-      <div class="message left">
-        <div class="message-text">L'intention de la relation est déjà relativement explicite avant même que la relation n'ai débuté, ce qui la rend plus artificielle qu'une relation classique.</div>
+      <div class="message" ng-class="{'right': paragraph.right, 'left':paragraph.left}" ng-repeat="paragraph in data.paragraphs">
+        <div class="message-text">{{paragraph.text}}</div>
       </div>
-      <div class="message right">
+      <!-- <div class="message right">
         <div class="message-text">Je trouve que ce n'est absolument pas fiable on ne peut pas prétendre fonder une relation amoureuse sérieuse quand à la base on connaît la personne seulement sur son physique et quelques infos personnelles qui n'ont pas de garantie d'être vraies!</div>
       </div>
       <div class="message left">
@@ -16,7 +16,7 @@
       </div>
       <div class="message right">
         <div class="message-text">Pour moi, elles enlèvent le "charme" d'une rencontre naturelle.</div>
-      </div>
+      </div> -->
     </div>
     <button class="ft--avenir__bold ft--white">Passer à la suite</button>
   </section>
